--- a/friends.html
+++ b/friends.html
@@ -24,6 +24,30 @@
             </div>
         </div>
 
+        <header class="screen-header">
+            <h1 class="screen-header__title">Friends</h1>
+            <div class="screen-header__icons">
+                <span>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </span>
+                <span>
+                    <i class="fa-solid fa-music"></i>
+                </span>
+                <span>
+                    <i class="fas fa-cog"></i>
+                </span>
+            </div>
+
+        </header>
+
+        <a id="friends-display-link">
+            <i class="fas fa-info-circle"></i> Friends' Names Display
+            <i class="fas fa-chevron-right fa-xs"></i>
+        </a>
+
+
+        </div>
+
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__btn">
