--- a/chats.html
+++ b/chats.html
@@ -31,6 +31,9 @@
                     <i class="fa-solid fa-magnifying-glass fa-lg"></i>
                 </span>
                 <span>
+                    <i class="fa-regular fa-comment-dots fa-lg"></i>
+                </span>
+                <span>
                     <i class="fa-solid fa-music fa-lg"></i>
                 </span>
                 <span>
@@ -39,43 +42,20 @@
             </div>
         </header>
 
-        <a id="friends-display-link">
-            <i class="fas fa-info-circle"></i> Friends' Names Display
-            <i class="fas fa-chevron-right fa-xs"></i>
-        </a>
+        <main class="main-screen">
 
-        <main class="friends-screen">
             <div class="user-component">
                 <div class="user-component__column">
                     <img src="https://avatars.githubusercontent.com/u/129013571?v=4"
                         class="user-component__avatar user-component__avatar--xl" />
                     <div class="user-component__text">
                         <h4 class="user-component__title">player</h4>
-                        <!-- <h6 class="user-component__subtitle">This text whatever.</h6> -->
+                        <h6 class="user-component__subtitle">Please check my Kokoa Info</h6>
                     </div>
                 </div>
-                <div class="user-component__column"></div>
-            </div>
-            <div class="friends-screen__channel">
-                <div class="friends-screen__channel-header">
-                    <span>Channel</span>
-                    <i class="fas fa-chevron-up fa-xs"></i>
-                </div>
-                <div class="user-component">
-                    <div class="user-component__column">
-                        <img src="https://avatars.githubusercontent.com/u/129013571?v=4"
-                            class="user-component__avatar user-component__avatar--sm" />
-                        <div class="user-component__text">
-                            <h4 class="user-component__title">Channel</h4>
-                        </div>
-                    </div>
-
-                    <div class="user-component__column">
-                        <div>
-                            <span>2</span>
-                            <i class="fas fa-chevron-up fa-xs"></i>
-                        </div>
-                    </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
                 </div>
             </div>
         </main>
@@ -84,13 +64,13 @@
             <ul class="nav__list">
                 <li class="nav__btn">
                     <a class="nav__link" href="friends.html">
-                        <i class="fas fa-2x fa-user"></i>
+                        <i class="far fa-2x fa-user"></i>
                     </a>
                 </li>
                 <li class="nav__btn">
                     <a class="nav__link" href="chats.html">
                         <span class="nav__notification badge">1</span>
-                        <i class="far fa-2x fa-comment"></i>
+                        <i class="fas fa-2x fa-comment"></i>
                     </a>
                 </li>
                 <li class="nav__btn">
@@ -106,8 +86,8 @@
                 </li>
             </ul>
         </nav>
-
         <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
+
     </body>
 
 </html>
