--- a/chat.html
+++ b/chat.html
@@ -1,10 +1,74 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Chat with Nico</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+
+    <body id="chat-screen">
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span>No Service</span>
+                <i class="fa-solid fa-wifi"></i>
+            </div>
+            <div class="status-bar__column">
+                <span>18:43</span>
+            </div>
+            <div class="status-bar__column">
+                <span>11%</span>
+                <i class="fa-solid fa-battery-quarter"></i>
+                <i class="fa-solid fa-bolt"></i>
+            </div>
+        </div>
+
+
+        <header class="alt-header">
+            <div class="alt-header__column">
+                <a href="chats.html">
+                    <i class="fas fa-angle-left fa-xl"></i>
+                </a>
+            </div>
+            <div class="alt-header__column">
+                <h1 class="alt-header__title">니꼬</h1>
+            </div>
+            <div class="alt-header__column">
+                <span><i class="fas fa-search fa-lg"></i></span>
+                <span><i class="fas fa-bars fa-lg"></i></span>
+            </div>
+        </header>
+
+
+        <main class="main-screen main-chat">
+            <div class="chat__timestamp">
+                Sunday, November 3, 2024
+            </div>
+
+            <div class="message-row">
+                <img src="https://avatars.githubusercontent.com/u/129013571?v=4" />
+                <div class="message-row__content">
+                    <span class="message__author">니꼬</span>
+                    <div class="message__info">
+                        <span class="message__bubble">Hi</span>
+                        <span class="message__time">21:27</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="message-row message-row--own">
+                <div class="message-row__content">
+                    <div class="message__info">
+                        <span class="message__bubble">안녕</span>
+                        <span class="message__time">21:27</span>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+
+        <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
+    </body>
+
 </html>
