--- a/more.html
+++ b/more.html
@@ -35,7 +35,10 @@
                     <i class="fa-solid fa-music fa-lg"></i>
                 </span>
                 <span>
-                    <i class="fas fa-cog fa-lg"></i>
+                    <a href="settings.html">
+                        <i class="fas fa-cog fa-lg"></i>
+                    </a>
+
                 </span>
             </div>
         </header>
