--- a/chat.html
+++ b/chat.html
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div class="alt-header__column">
-                <h1 class="alt-header__title">니꼬</h1>
+                <h1 class="alt-header__title">player</h1>
             </div>
             <div class="alt-header__column">
                 <span><i class="fas fa-search fa-lg"></i></span>
@@ -49,7 +49,7 @@
             <div class="message-row">
                 <img src="https://avatars.githubusercontent.com/u/129013571?v=4" />
                 <div class="message-row__content">
-                    <span class="message__author">니꼬</span>
+                    <span class="message__author">player</span>
                     <div class="message__info">
                         <span class="message__bubble">Hi</span>
                         <span class="message__time">21:27</span>
@@ -66,6 +66,19 @@
                 </div>
             </div>
         </main>
+
+        <form class="reply">
+            <div class="reply__column">
+                <i class="far fa-plus-square fa-lg"></i>
+            </div>
+            <div class="reply__column">
+                <input type="text" placeholder="Write a message..." />
+                <i class="far fa-smile-wink fa-lg"></i>
+                <button>
+                    <i class="fas fa-arrow-up"></i>
+                </button>
+            </div>
+        </form>
 
 
         <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
