--- a/friends.html
+++ b/friends.html
@@ -106,6 +106,9 @@
                 </li>
             </ul>
         </nav>
+        <div id="splash-screen" >
+            <i class="fas fa-comment"></i>
+        </div>
 
         <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
     </body>
