--- a/chats.html
+++ b/chats.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </a>
-            
+
         </main>
 
         <nav class="nav">
@@ -88,8 +88,13 @@
                 </li>
             </ul>
         </nav>
-        <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
 
+        <div id="no-mobile">
+            <span>Your screen is too big!</span>
+            <span>화면을 줄여주세요!</span>
+        </div>
+
+        <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
     </body>
 
 </html>
