--- a/find.html
+++ b/find.html
@@ -142,6 +142,10 @@
             </ul>
         </nav>
 
+        <div id="no-mobile">
+            <span>Your screen is too big!</span>
+            <span>화면을 줄여주세요!</span>
+        </div>
 
         <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
     </body>
