--- a/friends.html
+++ b/friends.html
@@ -106,8 +106,13 @@
                 </li>
             </ul>
         </nav>
-        <div id="splash-screen" >
+        <div id="splash-screen">
             <i class="fas fa-comment"></i>
+        </div>
+
+        <div id="no-mobile">
+            <span>Your screen is too big!</span>
+            <span>화면을 줄여주세요!</span>
         </div>
 
         <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
