--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
             <input name="password" type="submit" value="Log In" />
             <a href="#">Find Kakao Account or Password</a>
         </form>
-        <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
 
+        <div id="no-mobile">
+            <span>Your screen is too big!</span>
+            <span>화면을 줄여주세요!</span>
+        </div>
+
+
+        <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
     </body>
 
 </html>
