--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </form>
 
         <div id="no-mobile">
-            <span>Your screen is too big!</span>
-            <span>화면을 줄여주세요!</span>
+            <span>Your screen is super big!</span>
+            <span>화면이 너무 커요 ㅠㅠ!</span>
         </div>
 
 
