--- a/more.html
+++ b/more.html
@@ -142,8 +142,8 @@
         </nav>
         
         <div id="no-mobile">
-            <span>Your screen is too big!</span>
-            <span>화면을 줄여주세요!</span>
+            <span>Your screen is super big!</span>
+            <span>화면이 너무 커요 ㅠㅠ!</span>
         </div>
 
         <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
