--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input name="username" type="text" placeholder="Email or phone number" />
             <input type="password" placeholder="Password" />
             <input name="password" type="submit" value="Log In" />
-            <a href="#">Find Kakao Account or Password</a>
+            <a href="friends.html">Find Kakao Account or Password</a>
         </form>
 
         <div id="no-mobile">
