--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <h1 class="welcome-header__title">Welcome to KakaoTalk</h1>
             <p class="welcome-header__text">If you have a Kakao Account, log in with your email or phone number.</p>
         </header>
-        <form id="login-form" action="friend.html" method="get">
+        <form id="login-form" action="friends.html" method="get">
             <input name="username" type="text" placeholder="Email or phone number" />
             <input type="password" placeholder="Password" />
             <input name="password" type="submit" value="Log In" />
-            <a href="friends.html">Find Kakao Account or Password</a>
+            <a href="">Find Kakao Account or Password</a>
         </form>
 
         <div id="no-mobile">
