--- a/more.html
+++ b/more.html
@@ -35,10 +35,7 @@
                     <i class="fa-solid fa-music fa-lg"></i>
                 </span>
                 <span>
-                    <a href="settings.html">
-                        <i class="fas fa-cog fa-lg"></i>
-                    </a>
-
+                    <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
                 </span>
             </div>
         </header>
@@ -140,7 +137,7 @@
                 </li>
             </ul>
         </nav>
-        
+
         <div id="no-mobile">
             <span>Your screen is super big!</span>
             <span>화면이 너무 커요 ㅠㅠ!</span>
