--- a/find.html
+++ b/find.html
@@ -32,7 +32,7 @@
                     <i class="fa-solid fa-magnifying-glass fa-lg"></i>
                 </span>
                 <span>
-                    <i class="fas fa-cog fa-lg"></i>
+                    <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
                 </span>
             </div>
         </header>
