--- a/friends.html
+++ b/friends.html
@@ -34,7 +34,7 @@
                     <i class="fa-solid fa-music fa-lg"></i>
                 </span>
                 <span>
-                    <i class="fas fa-cog fa-lg"></i>
+                    <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
                 </span>
             </div>
         </header>
