--- a/more.html
+++ b/more.html
@@ -140,7 +140,7 @@
 
         <div id="no-mobile">
             <span>Your screen is super big!</span>
-            <span>화면이 너무 커요 ㅠㅠ!</span>
+            <span>모비일용 화면이에요! 크기를 줄여주세용🐲</span>
         </div>
 
         <script src="https://kit.fontawesome.com/4438e2a14e.js" crossorigin="anonymous"></script>
